--- a/index.html
+++ b/index.html
@@ -164,6 +164,9 @@
     });
   </script>
   
+  <!-- Phantom Wallet Fix Script (Debe ejecutarse antes que cualquier otro) -->
+  <script src="src/phantom-fix.js"></script>
+  
   <!-- Main Application Script (ES Module) -->
   <script type="module" src="src/main.js"></script>
 </body>
