implement lazy initialization: Remove loading bar

--- a/index.html
+++ b/index.html
@@ -106,15 +106,7 @@
   <!-- Game Container -->
   <div id="game-container"></div>
   
-  <!-- Loading Screen -->
-  <div id="loading-screen" class="loading-container">
-    <div class="loading-title" style="font-family: 'Tektur', sans-serif;">BONK GAMES</div>
-    <div id="loading-asset" class="loading-asset" style="font-family: 'Tektur', sans-serif;"></div>
-    <div class="loading-bar-container">
-      <div id="loading-bar" class="loading-bar"></div>
-    </div>
-    <div id="loading-percent" class="loading-percent" style="font-family: 'Tektur', sans-serif;">0%</div>
-  </div>
+  <!-- Loading Screen (removed) -->
   
   <!-- Wallet Connection Debug Info - Hidden by default -->
   <div id="wallet-debug" style="display: none; position: fixed; bottom: 10px; left: 10px; background: rgba(0,0,0,0.8); color: white; padding: 10px; font-family: monospace; font-size: 12px; max-width: 400px; max-height: 200px; overflow: auto; z-index: 10000;">
